--- a/src/module/email/templates/confirmation.hbs
+++ b/src/module/email/templates/confirmation.hbs
@@ -1,7 +1,7 @@
-<p>Hey {{ name }},</p>
+<p>Hey {{ login }},</p>
 <p>Please click below to confirm your email</p>
 <p>
-  <a href="{{ url }}">Confirm</a>
+  <a href="{{ url }}">complete registration</a>
 </p>
 
 <p>If you did not request this email you can safely ignore it.</p>
