--- a/src/module/email/templates/recovery.password.hbs
+++ b/src/module/email/templates/recovery.password.hbs
@@ -1,7 +1,7 @@
-<p>Hey {{ name }},</p>
+<p>Hey {{ login }},</p>
 <p>Please click below to recovery to you password</p>
 <p>
-  <a href="{{ url }}">Recovery</a>
+  <a href="{{ url }}">Recovery-password</a>
 </p>
 
 <p>If you did not request this email, then you may be being hacked. We recommend that you sweep away the password.</p>
